// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes props to subcomponents 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  my link
</a>
`;

exports[`Link renders external links 1`] = `
<a
  href="http://example.com"
>
  my link
</a>
`;

exports[`Link renders internal links 1`] = `
<mockConstructor
  to="/foo"
>
  my link
</mockConstructor>
`;

exports[`Link renders tricky non gatsby links 1`] = `
<a
  href="#"
>
  my link
</a>
`;
